@@ -4,9 +4,10 @@ Build Date = @BUILDTIME@
 
 Changes in version 4.1:
  8:
-  DefaultCOnventions: allow multiple forced time coords
+  Add -isLargeFile option to FileWriter to generate 64-bit offset files
+  DefaultConventions: allow multiple forced time coords
   Grib: precipitation accumulation
-  point datasets: CF-1.5, Suomi, FslWindProfiler, Cosmic, GempakSurface, Madis, UnidataObs
+  point datasets: CF-1.5, Suomi, FslWindProfiler, Cosmic, GempakSurface, Madis, UnidataObs, GempakSounding
   catch illegal bounds shapes in CoordAxis1D.makeBounds()
   UAMIV iosp not handling file seperator generally
   Handle missing values in CFPointObs, NestedTables.
